fix uneven padding

--- a/css/inner/add-projects.less
+++ b/css/inner/add-projects.less
@@ -167,7 +167,7 @@
     font-weight: normal;
     text-decoration: none;
     box-shadow: 0 1px @white inset;
-    padding: 0 1vw;
+    padding: 0 1em;
     line-height: 3em;
     overflow: hidden;
     cursor: pointer;
